:wrench: add Routes and Swagger Api Docs
